@@ -8,6 +8,12 @@ describe "ExcelFunctions: TEXT" do
     FunctionTest.text("0.196", "0%").should == "20%"
   end
 
+  it "should turn a number into a float with the appropriate number of decimal places if 0.0" do
+    FunctionTest.text(1.184, "0.0").should == "1.2"
+    FunctionTest.text(1.134, "0.0").should == "1.1"
+    FunctionTest.text(1.134, "0.00").should == "1.13"
+  end
+
   it "should pass non-numbers through unchanged" do
     FunctionTest.text("Asdasddf","0%").should == "Asdasddf"
   end
